Add JWT auth token
